--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,9 +1,9 @@
 .app {
-  text-align: center;
+text-align: center;
 }
 
 .app-header {
-  background-color: #282c34;
+  background-color: #bad3f5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
