fix the connection and style

--- a/src/components/views/styles/AllCampusesView.css
+++ b/src/components/views/styles/AllCampusesView.css
@@ -3,7 +3,8 @@
 }
 
 .add-campus {
- border: 2px solid teal;
+ border: 2px;
  padding: 10px;
  margin: 5px;
+ background-color:  rgb(171, 241, 241);
 }
